# CS3P1-PthreadsOmp

./: CMakeLists.txt
introduction/: linked_list.c  pth_ll_one_mut.c
linked_list/: linked_list.c  pth_busy_waiting.c  pth_hello_world.c  pth_ll_mult_mut.c  pth_ll_one_mut.c  pth_ll_rwl.c
odd_even/: odd_even.c  omp_odd_even1.c  omp_odd_even2.c
